jim - May 9, 2006
        * Add support for LCD Screens

This is a new Changelog. The old one is now renamed to CHANGELOG.old.
These scripts are based on LFS-Bootscripts 3.2.2
