@@ -13,7 +13,7 @@
 
 # The executable that writes to the LCD
 #
-LCD_PROG=/sbin/putlcd
+LCD_PROG=/sbin/lcd-write
 
 # Number of characters the screen can handle
 #
