@@ -1,5 +1,6 @@
 jim - May 9, 2006
         * Add support for LCD Screens
+	* Added support for RaQ3 LCD and Cobalt Panel Utils
 
 This is a new Changelog. The old one is now renamed to CHANGELOG.old.
 These scripts are based on LFS-Bootscripts 3.2.2
